--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@stitches/react": "^1.2.8",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
