--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,15 @@
     "noFallthroughCasesInSwitch": true,
 
     /* Paths */
+    "baseUrl": "./",
     "paths": {
       "@/*" : ["./src/*"],
     },
+
+    // tests
+    "types": [
+      "vitest/globals"
+    ]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
