--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,8 @@ services:
       container_name: react_vite_app
       ports:
         - '8080:8080'
+      volumes:
+        - ./src:/app/src
+      working_dir: /app
       env_file:
         - .env
